<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Juego" android:minHeight="198dp" android:background="@color/colorBackground">

    <TextView
            android:text="@string/Jugador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="56dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.506"
            android:textColor="@color/colorGameIndications" android:textStyle="bold"/>
    <TextView
            android:text="@string/nameIA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView2"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:textColor="@color/colorGameIndications" android:textStyle="bold"/>
    <ImageView
            android:layout_width="125dp"
            android:layout_height="112dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/iv_input"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:contentDescription="@string/Jugador"
            android:layout_marginTop="8dp" app:layout_constraintHorizontal_bias="0.51"/>
    <ImageView
            android:layout_width="127dp"
            android:layout_height="111dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/iv_output"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/IA" app:layout_constraintHorizontal_bias="0.507"/>
    <Button
            android:text="@string/piedra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_piedra"
            android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/iv_output" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:background="@color/ColorButtons"
            style="?attr/borderlessButtonStyle"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" android:fontFamily="sans-serif"
            android:textStyle="bold"/>
    <Button
            android:text="@string/papel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_papel"
            android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/iv_output"
            app:layout_constraintStart_toEndOf="@+id/btn_piedra" android:layout_marginStart="20dp"
            android:background="@color/ColorButtons"
            style="?attr/borderlessButtonStyle"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" android:fontFamily="sans-serif"
            android:textStyle="bold"/>
    <Button
            android:text="@string/tijera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_tijera"
            android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/iv_output" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toEndOf="@+id/btn_papel"
            android:layout_marginStart="24dp"
            android:background="@color/ColorButtons" style="?attr/borderlessButtonStyle"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" android:fontFamily="sans-serif"
            android:textStyle="bold" app:layout_constraintHorizontal_bias="0.492"/>
    <Button
            android:text="@string/lagartija"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_lagartija"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="64dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_papel"
            app:layout_constraintEnd_toStartOf="@+id/btn_spock" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.216"
            android:background="@color/ColorButtons" style="?attr/borderlessButtonStyle"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" android:fontFamily="sans-serif"
            android:textStyle="bold" android:layout_marginTop="20dp"/>
    <Button
            android:text="@string/spock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_spock"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="68dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_papel"
            android:background="@color/ColorButtons"
            style="?attr/borderlessButtonStyle"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" android:fontFamily="sans-serif"
            android:textStyle="bold" android:layout_marginTop="20dp"/>
    <Button
            android:text="@string/exitCross"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnExit" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:textSize="24sp" android:textStyle="bold"
            android:background="?attr/selectableItemBackgroundBorderless" android:textColor="@color/ColorButtons"/>
    <TextView
            android:text="@string/phraseVS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/iv_input" android:textColor="@color/colorGameIndications"
            android:textStyle="bold"/>
    <TextView
            android:text="@string/indications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvIndicaciones" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/iv_output"
            android:textStyle="bold" android:textColor="@color/colorGameIndications"/>
</android.support.constraint.ConstraintLayout>