<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".InstructionActivity" android:background="@color/colorBackground">

    <Button
            android:text="@string/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnIntruccion"
            android:layout_marginTop="28dp" app:layout_constraintTop_toBottomOf="@+id/iv_Instruccion"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="28dp"
            android:visibility="visible"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" android:fontFamily="sans-serif"
            android:textStyle="bold" android:textColor="@color/colorTextButtons"
            android:background="@color/ColorButtons" app:layout_constraintStart_toEndOf="@+id/btnAnterior"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.651"/>
    <ImageView
            android:layout_width="369dp"
            android:layout_height="377dp" app:srcCompat="@drawable/piedrarules"
            android:id="@+id/iv_Instruccion"
            android:layout_marginTop="44dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:contentDescription="@string/Instruccion" app:layout_constraintHorizontal_bias="0.488"/>
    <Button
            android:text="@string/previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnAnterior"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/iv_Instruccion"
            android:layout_marginStart="64dp" app:layout_constraintStart_toStartOf="parent"
            android:visibility="invisible"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" android:fontFamily="sans-serif"
            android:textStyle="bold" android:textColor="@color/colorTextButtons"
            android:background="@color/ColorButtons"/>
    <Button
            android:text="@string/exitCross"
            android:layout_width="44dp"
            android:layout_height="33dp"
            android:id="@+id/btnExit"
            android:textAppearance="?attr/borderlessButtonStyle" android:layout_marginTop="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:background="?attr/selectableItemBackgroundBorderless"
            android:textSize="24sp" android:textStyle="bold"
            android:textColor="@color/ColorButtons"/>
</android.support.constraint.ConstraintLayout>