<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Principal" android:background="@color/colorBackground">

    <Button
            android:text="@string/inicio"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:id="@+id/btninicio" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="228dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.498"
            android:background="@color/ColorButtons"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" android:textStyle="bold"
            android:fontFamily="sans-serif" android:textColor="@color/colorTextButtons"/>
    <Button
            android:text="@string/salir"
            android:layout_width="157dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/btnSalir"
            android:layout_marginBottom="150dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@+id/btnInstruccion" app:layout_constraintVertical_bias="0.0"
            android:background="@color/ColorButtons"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" android:textStyle="bold"
            android:fontFamily="sans-serif" android:textColor="@color/colorTextButtons"/>
    <Button
            android:text="@string/btnInstruccion"
            android:layout_width="157dp"
            android:layout_height="48dp"
            android:id="@+id/btnInstruccion" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/btninicio" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.514"
            android:background="@color/ColorButtons"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" android:textStyle="bold"
            android:fontFamily="sans-serif" android:textColor="@color/colorTextButtons"/>
    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvLogo" android:layout_marginTop="112dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textStyle="bold" android:textColor="@color/colorGameIndications" android:textSize="30sp"/>
</android.support.constraint.ConstraintLayout>